--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Job Core</title>
     </head>
     <body>
         <div id="app"></div>
-        <script type="text/javascript" src="/bundle.js"></script>
+        <script type="text/javascript" src="/public/bundle.js"></script>
     </body>
 </html>
