--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Job Core</title>
+        <title>Breathe Code - Student</title>
     </head>
     <body>
         <div id="app"></div>
-        <script type="text/javascript" src="/public/bundle.js"></script>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
