--- a/template.html
+++ b/template.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Breathe Code - Student</title>
-    <link rel="shortcut icon" href="/favicon.png"></head>
+    </head>
     <body>
         <div id="app"></div>
-    <script type="text/javascript" src="/bundle.d2016ceb48b9e35dfb76.js"></script></body>
+    </body>
 </html>
