login re-implemented and sentry.js added for monitoring

--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
         <title>Breathe Code - Student</title>
     </head>
     <body>
+        <script src="https://cdn.ravenjs.com/3.24.2/raven.min.js" crossorigin="anonymous"></script>
         <div id="app"></div>
     </body>
 </html>
