--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,5 @@
     <body>
         <script src="https://cdn.ravenjs.com/3.24.2/raven.min.js" crossorigin="anonymous"></script>
         <div id="app"></div>
-    <script type="text/javascript" src="/bundle.804f5c34606a94da822d.js"></script></body>
+    <script type="text/javascript" src="/vendor.bundle.js"></script><script type="text/javascript" src="/main.bundle.js"></script></body>
 </html>
