hashin on the bundle name

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Breathe Code - Student</title>
     <link rel="shortcut icon" href="/favicon.png"></head>
     <body>
         <script src="https://cdn.ravenjs.com/3.24.2/raven.min.js" crossorigin="anonymous"></script>
         <div id="app"></div>
-    <script type="text/javascript" src="/vendor.bundle.js"></script><script type="text/javascript" src="/main.bundle.js"></script></body>
+    <script type="text/javascript" src="/vendor.ab410b6db84bc127067d.bundle.js"></script><script type="text/javascript" src="/ab410b6db84bc127067d.bundle.js"></script></body>
 </html>
