--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
     <body>
         <script src="https://cdn.ravenjs.com/3.24.2/raven.min.js" crossorigin="anonymous"></script>
         <div id="app"></div>
-    <script type="text/javascript" src="/vendor.bundle.js"></script><script type="text/javascript" src="/main.bundle.js"></script></body>
+    <script type="text/javascript" src="/vendor.3556512688ca1eefb8a3.bundle.js"></script><script type="text/javascript" src="/3556512688ca1eefb8a3.bundle.js"></script></body>
 </html>
